--- a/locales/es.json
+++ b/locales/es.json
@@ -99,7 +99,7 @@
       "note": "Instrucciones especiales para el vendedor",
       "subtotal": "Subtotal",
       "shipping_at_checkout":
-        "Gastos de envío y descuentos calculado al momento de pagar",
+        "Los gastos de envío y descuentos serán calculados al momento de pagar",
       "update": "Actualizar carrito",
       "checkout": "Finalizar pedido",
       "empty": "Su carrito actualmente está vacío.",
